# avengers

./: .gitignore  .mcp.json  CLAUDE.md  README.md  tmpclaude-6ceb-cwd
.claude/: settings.json
.claude/commands/: assemble.md  debrief.md  mission.md
.claude/designs/: m4-parallel-patterns.md
.claude/plans/: sleepy-conjuring-charm.md  tossplace-bootstrap.md
.claude/resume/: latest.md
conversion/: 01_project_analysis.md  02_technology_strategy.md  03_project_kickoff.md  04_fullstack_architecture.md  05_avengers_workflow.md  06_final_summary.md
docs/: AGENTS.md  ARCHITECTURE.md  EXAMPLES.md  FEATURES.md  INSTALLATION.md  WORKFLOWS.md  problem.md  requirements.md
docs/agent-metrics/: captain-metrics.md  evaluation-rubrics.md  groot-metrics.md  ironman-metrics.md  natasha-metrics.md
mcp-servers/avengers-core/: package-lock.json  package.json
mcp-servers/avengers-core/src/: agent-templates.ts  index.ts
mcp-servers/avengers-core/src/tools/: agent-communication.ts  analyze-request.ts  assign-task.ts  build-project.ts  collect-results.ts  dispatch-agent.ts  execute-group.ts  generate-cicd.ts  get-agent-status.ts  merge-worktree.ts  restore-state.ts  run-local.ts  run-tests.ts  save-state.ts  stop-process.ts  summarize-session.ts  validate-completion.ts
mcp-servers/avengers-core/src/types/: assemble-state.ts
mcp-servers/avengers-core/tests/: efficiency.test.ts  integration.test.ts  package-lock.json  package.json  parallel.test.ts
mcp-servers/avengers-skills/: package-lock.json  package.json
mcp-servers/avengers-skills/src/: index.ts
mcp-servers/avengers-skills/src/tools/: brainstorm.ts  code-review.ts  cpp-packages.ts  run-tdd.ts
mcp-servers/avengers-skills/tests/: integration.test.ts  package.json
reference/analysis/: 07-evals-insights.md
reference/docs/: 01_multi_agent_research_system.md  02_building_agents_claude_agent_sdk.md  03_equipping_agents_with_skills.md  04_advanced_tool_use.md  05_code_execution_with_mcp.md  06_claude_code_best_practices.md  07_demystifying_evals_for_ai_agents.md  cpp-package-mappings.json
skills/brainstorming/: SKILL.md
skills/code-review/: SKILL.md
skills/efficiency/: SKILL.md
skills/evaluation/: SKILL.md
skills/evaluation/evals/: index.ts  package.json
skills/evaluation/evals/agent-coordination/: task-distribution.test.ts
skills/evaluation/evals/capability/: multi-agent.test.ts
skills/evaluation/evals/tool-usage/: tool-selection.test.ts
skills/parallel-agents/: SKILL.md
skills/specialized/backend/: SKILL.md
skills/specialized/cicd/: SKILL.md
skills/specialized/cpp-packages/: SKILL.md
skills/specialized/frontend/: SKILL.md
skills/specialized/systematic-debugging/: SKILL.md
skills/tdd/: SKILL.md
tests/: package-lock.json  package.json  test-mcp-servers.ts
tests/evals/: index.ts
tests/evals/agent-coordination/: parallel-execution.test.ts
tests/evals/regression/: basic-tasks.test.ts
tossplace-clone/: .gitignore  ARCHITECTURE.md  BUILDING.md  DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md
tossplace-clone/desktop/: CMakeLists.txt
tossplace-clone/desktop/src/: ApplicationController.h  application.cpp  application.h  main.cpp
tossplace-clone/desktop/src/core/bindings/: authservicebinding.cpp  authservicebinding.h  productservicebinding.cpp  productservicebinding.h
tossplace-clone/desktop/src/core/database/: Database.h  database.cpp
tossplace-clone/desktop/src/core/models/: OrderModel.h  PaymentModel.h  ProductModel.h  product.cpp  product.h  user.h
tossplace-clone/desktop/src/core/services/: OrderService.h  PaymentService.h  ProductService.h  authservice.cpp  authservice.h  productservice.cpp
tossplace-clone/desktop/src/ui/: LoginScreen.qml  ProductDetailScreen.qml  ProductListScreen.qml  main.qml
tossplace-clone/desktop/src/ui/styles/: TossTheme.qml
tossplace-clone/desktop/tests/: CMakeLists.txt  test_auth.cpp  test_database.cpp  test_product.cpp
tossplace-clone/shared/schemas/: database.sql
tossplace-clone/web/: package.json
tossplace-clone/web/src/types/: index.ts
